tests/ui/eii/default/multiple-default-impls.stderr
error[E0428]: the name `eii1` is defined multiple times
  --> $DIR/multiple-default-impls.rs:16:1
   |
LL | #[eii(eii1)]
   | ------------ previous definition of the macro `eii1` here
...
LL | #[eii(eii1)]
   | ^^^^^^^^^^^^ `eii1` redefined here
   |
   = note: `eii1` must be defined only once in the macro namespace of this module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0428`.
